add offset detail

--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -1,9 +1,8 @@
-#zk list
+# zk list
 kafka.zk.list=master:2181
 #kafka.zk.list=dn1:2181,dn2:2181,dn3:2181
 
-# batch commit
-cms.webank.mongodb.commit.size=5000
-
+# zk limit
+kafka.zk.limit.size=25
 # webui port
 cms.webank.webui.port=8048
