add auto to request offset

--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -4,5 +4,6 @@ kafka.zk.list=master:2181
 
 # zk limit
 kafka.zk.limit.size=25
-# webui port
-cms.webank.webui.port=8048
+
+# kafka eagel webui port
+kafka.eagel.webui.port=8048
