--- a/pom.xml
+++ b/pom.xml
@@ -199,7 +199,7 @@
 				<version>2.2</version>
 				<configuration>
 					<warName>ke</warName>
-					<packagingExcludes>WEB-INF/classes/kms/**,WEB-INF/classes/ke.db,WEB-INF/classes/ke.sh,WEB-INF/classes/assembly.xml</packagingExcludes>
+					<packagingExcludes>WEB-INF/classes/plugins/**,WEB-INF/classes/sql/**,WEB-INF/classes/kms/**,WEB-INF/classes/ke.db,WEB-INF/classes/bash/**,WEB-INF/classes/assembly.xml</packagingExcludes>
 				</configuration>
 			</plugin>
 
