--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -1,6 +1,6 @@
 # zk list
-kafka.zk.list=master:2181
-#kafka.zk.list=dn1:2181,dn2:2181,dn3:2181
+#kafka.zk.list=master:2181
+kafka.zk.list=dn1:2181,dn2:2181,dn3:2181
 
 # zk limit
 kafka.zk.limit.size=25
