add e-mail  to alarm lag info

--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -1,9 +1,16 @@
 # zk list
-#kafka.zk.list=master:2181
-kafka.zk.list=dn1:2181,dn2:2181,dn3:2181
+kafka.zk.list=master:2181
+#kafka.zk.list=dn1:2181,dn2:2181,dn3:2181
 
 # zk limit
 kafka.zk.limit.size=25
 
 # kafka eagel webui port
 kafka.eagel.webui.port=8048
+
+# Alarm email configure
+kafka.eagel.mail.enable=true
+kafka.eagel.mail.username=alert_sa@163.com
+kafka.eagel.mail.password=mqslimczkdqabbbg
+kafka.eagel.mail.server.host=smtp.163.com
+kafka.eagel.mail.server.port=25
