fixed zk  pool release

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,9 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+	<listener>
+		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
+	</listener>
 	<servlet-mapping>
 		<servlet-name>SpringMvc</servlet-name>
 		<url-pattern>/</url-pattern>
