--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -8,6 +8,12 @@ kafka.zk.limit.size=25
 # kafka eagel webui port
 kafka.eagel.webui.port=8048
 
+# kafka offset storage
+kafka.eagle.offset.storage=kafka
+
+# kafka rpc port
+kafka.eagle.offset.rpc.port=19092
+
 # Alarm email configure
 kafka.eagel.mail.enable=true
 kafka.eagel.mail.username=alert_sa@163.com
