--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -12,7 +12,8 @@ kafka.eagel.webui.port=8048
 kafka.eagle.offset.storage=kafka
 
 # kafka rpc port
-kafka.eagle.offset.rpc.port=19092
+kafka.eagle.offset.rpc.port=4396
+kafka.eagle.offset.rpc.timeout=60000
 
 # Alarm email configure
 kafka.eagel.mail.enable=true
