fixed kafka consumer page

--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -1,5 +1,5 @@
 # zk list
-kafka.zk.list=master:2181
+kafka.zk.list=slave01:2181
 #kafka.zk.list=dn1:2181,dn2:2181,dn3:2181
 
 # zk limit
@@ -9,7 +9,7 @@ kafka.zk.limit.size=25
 kafka.eagel.webui.port=8048
 
 # kafka offset storage
-kafka.eagle.offset.storage=
+kafka.eagle.offset.storage=kafka
 
 # kafka rpc port
 kafka.eagle.offset.rpc.port=4396
