dev kafka multiple cluster

--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -1,6 +1,8 @@
 # zk list
 kafka.zk.list=slave01:2181
-#kafka.zk.list=dn1:2181,dn2:2181,dn3:2181
+kafka.eagle.zk.cluster.alias=cluster1,cluster2
+cluster1.zk.list=slave01:2181
+cluster2.zk.list=master:2181
 
 # zk limit
 kafka.zk.limit.size=25
