fixed kafka 0.10.x multi

--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -1,5 +1,4 @@
-# zk list
-kafka.zk.list=slave01:2181
+# multi zookeeper&kafka cluster list
 kafka.eagle.zk.cluster.alias=cluster1,cluster2
 cluster1.zk.list=slave01:2181
 cluster2.zk.list=master:2181
