add multi cluster to monitor kafka

--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -10,7 +10,7 @@ kafka.zk.limit.size=25
 kafka.eagel.webui.port=8048
 
 # kafka offset storage
-kafka.eagle.offset.storage=
+kafka.eagle.offset.storage=kafka
 
 # kafka rpc port
 kafka.eagle.offset.rpc.port=4396
