add a topic corresponding to multiple sms alarm users

--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -18,6 +18,7 @@ kafka.eagle.offset.rpc.timeout=30000
 
 # Alarm email configure
 kafka.eagel.mail.enable=true
+kafka.eagel.mail.sa=alert_sa
 kafka.eagel.mail.username=alert_sa@163.com
 kafka.eagel.mail.password=mqslimczkdqabbbg
 kafka.eagel.mail.server.host=smtp.163.com
