--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -23,3 +23,7 @@ kafka.eagel.mail.username=alert_sa@163.com
 kafka.eagel.mail.password=mqslimczkdqabbbg
 kafka.eagel.mail.server.host=smtp.163.com
 kafka.eagel.mail.server.port=25
+
+# Alarm sms configure
+kafka.eagel.sms.enable=true
+kafka.eagel.sms.url=
