--- a/kafka-eagle-api/pom.xml
+++ b/kafka-eagle-api/pom.xml
@@ -13,5 +13,15 @@
 			<artifactId>kafka-eagle-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.janino</groupId>
+			<artifactId>janino</artifactId>
+			<version>3.0.6</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
 	</dependencies>
 </project>
