--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -1,7 +1,6 @@
 # multi zookeeper&kafka cluster list
-kafka.eagle.zk.cluster.alias=cluster1,cluster2
+kafka.eagle.zk.cluster.alias=cluster1
 cluster1.zk.list=slave01:2181
-cluster2.zk.list=master:2181
 
 # zk limit
 kafka.zk.limit.size=25
