use new ways to get kafka consumer metadata information & add delete topic function

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -26,3 +26,6 @@ kafka.eagel.mail.server.port=25
 # Alarm sms configure
 kafka.eagel.sms.enable=true
 kafka.eagel.sms.url=
+
+# Delete kafka topic token
+kafka.eagle.topic.token=ke1221ke
