fixed config file & clean code

--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -23,3 +23,6 @@ kafka.eagel.mail.username=alert_sa@163.com
 kafka.eagel.mail.password=mqslimczkdqabbbg
 kafka.eagel.mail.server.host=smtp.163.com
 kafka.eagel.mail.server.port=25
+
+# Delete kafka topic token
+kafka.eagle.topic.token=keadmin
