fixed script & maven plugin version

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: java
 jdk:
-  - openjdk7
-  - oraclejdk7
   - oraclejdk8
   
 after_success:
-  - mvn clean cobertura:cobertura coveralls:report
+  - mvn clean && mvn test
