--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: java
 
 jdk:
+  - oraclejdk7
   - oraclejdk8
 
 deploy:
   provider: script
-  script: "cp .travis.settings.xml /usr/local/maven/conf/settings.xml && mvn deploy"
+  script: "cp .travis.settings.xml /usr/local/maven/conf/settings.xml"
   skip_cleanup: true
   on:
     tags: true
