--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: java
 
 jdk:
@@ -6,7 +7,11 @@ jdk:
 
 deploy:
   provider: script
-  script: "cp .travis.settings.xml /usr/local/maven/conf/settings.xml"
+  script: 
+	- "pwd && ll"
+	- "cp .travis.settings.xml /usr/local/maven/conf/settings.xml"
+  	- "echo 'copy setting'"
+	- "ll /usr/local/maven/conf/ && cat /usr/local/maven/conf/settings.xml"
   skip_cleanup: true
   on:
     tags: true
