fixed kafka sql jar conflict & add user del and modify

--- a/kafka-eagle-core/pom.xml
+++ b/kafka-eagle-core/pom.xml
@@ -18,6 +18,12 @@
 			<groupId>org.apache.calcite</groupId>
 			<artifactId>calcite-core</artifactId>
 			<version>1.6.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.codehaus.janino</groupId>
+					<artifactId>commons-compiler</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.calcite</groupId>
