add kafka sasl modules

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -1,21 +1,33 @@
+######################################
 # multi zookeeper&kafka cluster list
+######################################
 kafka.eagle.zk.cluster.alias=cluster1
 cluster1.zk.list=slave01:2181
 
-# zk limit
+######################################
+# zk client thread limit
+######################################
 kafka.zk.limit.size=25
 
+######################################
 # kafka eagel webui port
+######################################
 kafka.eagel.webui.port=8048
 
+######################################
 # kafka offset storage
+######################################
 kafka.eagle.offset.storage=kafka
 
+######################################
 # kafka rpc port
+######################################
 kafka.eagle.offset.rpc.port=4396
 kafka.eagle.offset.rpc.timeout=120000
 
-# Alarm email configure
+######################################
+# alarm email configure
+######################################
 kafka.eagel.mail.enable=true
 kafka.eagel.mail.sa=alert_sa
 kafka.eagel.mail.username=alert_sa@163.com
@@ -23,9 +35,20 @@ kafka.eagel.mail.password=mqslimczkdqabbbg
 kafka.eagel.mail.server.host=smtp.163.com
 kafka.eagel.mail.server.port=25
 
-# Alarm sms configure
+######################################
+# alarm sms configure
+######################################
 kafka.eagel.sms.enable=true
 kafka.eagel.sms.url=
 
-# Delete kafka topic token
+######################################
+# delete kafka topic token
+######################################
 kafka.eagle.topic.token=ke1221ke
+
+######################################
+# kafka sasl authenticate
+######################################
+kafka.eagle.sasl.enable=false
+kafka.eagle.sasl.client=/Users/dengjie/Documents/workspace/kafka-egale/kafka-eagle-web/src/main/resources/conf/kafka_client_jaas.conf
+
