--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -1,18 +1,28 @@
+######################################
 # multi zookeeper&kafka cluster list
+######################################
 kafka.eagle.zk.cluster.alias=cluster1,cluster2
 cluster1.zk.list=tdn1:2181:tdn2:2181,tdn3:2181
 cluster2.zk.list=xdn10:2181:xdn11:2181:xdn12:2181
 
-# zk limit
+######################################
+# zk client thread limit
+######################################
 kafka.zk.limit.size=25
 
+######################################
 # kafka eagel webui port
+######################################
 kafka.eagel.webui.port=8048
 
+######################################
 # kafka offset storage
+######################################
 kafka.eagle.offset.storage=kafka
 
-# Alarm email configure
+######################################
+# alarm email configure
+######################################
 kafka.eagel.mail.enable=true
 kafka.eagel.mail.sa=alert_sa
 kafka.eagel.mail.username=alert_sa@163.com
@@ -20,5 +30,14 @@ kafka.eagel.mail.password=mqslimczkdqabbbg
 kafka.eagel.mail.server.host=smtp.163.com
 kafka.eagel.mail.server.port=25
 
-# Delete kafka topic token
+######################################
+# delete kafka topic token
+######################################
 kafka.eagle.topic.token=keadmin
+
+######################################
+# kafka sasl authenticate
+######################################
+kafka.eagle.sasl.enable=true
+kafka.eagle.sasl.client=
+
