--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -50,5 +50,7 @@ kafka.eagle.topic.token=ke1221ke
 # kafka sasl authenticate
 ######################################
 kafka.eagle.sasl.enable=false
-kafka.eagle.sasl.client=/Users/dengjie/Documents/workspace/kafka-egale/kafka-eagle-web/src/main/resources/conf/kafka_client_jaas.conf
+kafka.eagle.sasl.protocol=SASL_PLAINTEXT
+kafka.eagle.sasl.mechanism=PLAIN
+kafka.eagle.sasl.client=/Users/dengjie/hadoop/workspace/kafka-v2/src/main/resources/kafka_client_jaas.conf
 
