add kafka SASL_PLAINTEXT

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -2,7 +2,7 @@
 # multi zookeeper&kafka cluster list
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
-cluster1.zk.list=slave01:2181
+cluster1.zk.list=dn1:2181
 
 ######################################
 # zk client thread limit
@@ -44,12 +44,12 @@ kafka.eagel.sms.url=
 ######################################
 # delete kafka topic token
 ######################################
-kafka.eagle.topic.token=ke1221ke
+kafka.eagle.topic.token=keadmin
 
 ######################################
 # kafka sasl authenticate
 ######################################
-kafka.eagle.sasl.enable=false
+kafka.eagle.sasl.enable=true
 kafka.eagle.sasl.protocol=SASL_PLAINTEXT
 kafka.eagle.sasl.mechanism=PLAIN
 kafka.eagle.sasl.client=/Users/dengjie/hadoop/workspace/kafka-v2/src/main/resources/kafka_client_jaas.conf
