optimization sql query topic and add kafka sasl & mock message

--- a/kafka-eagle-web/src/main/resources/conf/kafka_client_jaas.conf
+++ b/kafka-eagle-web/src/main/resources/conf/kafka_client_jaas.conf
@@ -1,5 +1,5 @@
 KafkaClient {
-org.apache.kafka.common.security.plain.PlainLoginModule required
-username="kafka"
-password="kafka#secret";
+  org.apache.kafka.common.security.plain.PlainLoginModule required
+  username="admin"
+  password="admin-secret";
 };
