--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -38,6 +38,8 @@ kafka.eagle.topic.token=keadmin
 ######################################
 # kafka sasl authenticate
 ######################################
-kafka.eagle.sasl.enable=true
-kafka.eagle.sasl.client=
+kafka.eagle.sasl.enable=false
+kafka.eagle.sasl.protocol=SASL_PLAINTEXT
+kafka.eagle.sasl.mechanism=PLAIN
+kafka.eagle.sasl.client=/hadoop/kafka-eagle/conf/kafka_client_jaas.conf
 
