fixed conflict jar & modify property field

--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -11,9 +11,9 @@ cluster2.zk.list=xdn10:2181:xdn11:2181:xdn12:2181
 kafka.zk.limit.size=25
 
 ######################################
-# kafka eagel webui port
+# kafka eagle webui port
 ######################################
-kafka.eagel.webui.port=8048
+kafka.eagle.webui.port=8048
 
 ######################################
 # kafka offset storage
@@ -23,12 +23,12 @@ kafka.eagle.offset.storage=kafka
 ######################################
 # alarm email configure
 ######################################
-kafka.eagel.mail.enable=true
-kafka.eagel.mail.sa=alert_sa
-kafka.eagel.mail.username=alert_sa@163.com
-kafka.eagel.mail.password=mqslimczkdqabbbg
-kafka.eagel.mail.server.host=smtp.163.com
-kafka.eagel.mail.server.port=25
+kafka.eagle.mail.enable=true
+kafka.eagle.mail.sa=alert_sa
+kafka.eagle.mail.username=alert_sa@163.com
+kafka.eagle.mail.password=mqslimczkdqabbbg
+kafka.eagle.mail.server.host=smtp.163.com
+kafka.eagle.mail.server.port=25
 
 ######################################
 # delete kafka topic token
