--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -10,9 +10,9 @@ cluster1.zk.list=slave01:2181
 kafka.zk.limit.size=25
 
 ######################################
-# kafka eagel webui port
+# kafka eagle webui port
 ######################################
-kafka.eagel.webui.port=8048
+kafka.eagle.webui.port=8048
 
 ######################################
 # kafka offset storage
@@ -28,18 +28,12 @@ kafka.eagle.offset.rpc.timeout=120000
 ######################################
 # alarm email configure
 ######################################
-kafka.eagel.mail.enable=true
-kafka.eagel.mail.sa=alert_sa
-kafka.eagel.mail.username=alert_sa@163.com
-kafka.eagel.mail.password=mqslimczkdqabbbg
-kafka.eagel.mail.server.host=smtp.163.com
-kafka.eagel.mail.server.port=25
-
-######################################
-# alarm sms configure
-######################################
-kafka.eagel.sms.enable=true
-kafka.eagel.sms.url=
+kafka.eagle.mail.enable=true
+kafka.eagle.mail.sa=alert_sa
+kafka.eagle.mail.username=alert_sa@163.com
+kafka.eagle.mail.password=mqslimczkdqabbbg
+kafka.eagle.mail.server.host=smtp.163.com
+kafka.eagle.mail.server.port=25
 
 ######################################
 # delete kafka topic token
