move configure file & remain system-config

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -48,3 +48,11 @@ kafka.eagle.sasl.protocol=SASL_PLAINTEXT
 kafka.eagle.sasl.mechanism=PLAIN
 kafka.eagle.sasl.client=/Users/dengjie/hadoop/workspace/kafka-v2/src/main/resources/kafka_client_jaas.conf
 
+######################################
+# kafka jdbc driver address
+######################################
+kafka.eagle.driver=com.mysql.jdbc.Driver
+kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+kafka.eagle.username=root
+kafka.eagle.password=smartlab
+
