--- a/kafka-eagle-web/pom.xml
+++ b/kafka-eagle-web/pom.xml
@@ -247,6 +247,16 @@
 					<include>**/*.xml</include>
 				</includes>
 			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>**/*.xml</include>
+				</includes>
+				<excludes>
+					<exclude>assembly.xml</exclude>
+					<exclude>conf/**</exclude>
+				</excludes>
+			</resource>
 		</resources>
 	</build>
 </project>
