--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -43,3 +43,11 @@ kafka.eagle.sasl.protocol=SASL_PLAINTEXT
 kafka.eagle.sasl.mechanism=PLAIN
 kafka.eagle.sasl.client=/hadoop/kafka-eagle/conf/kafka_client_jaas.conf
 
+######################################
+# kafka jdbc driver address
+######################################
+kafka.eagle.driver=com.mysql.jdbc.Driver
+kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+kafka.eagle.username=root
+kafka.eagle.password=smartloli
+
