add offset logger print

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -20,10 +20,10 @@ kafka.eagle.webui.port=8048
 kafka.eagle.offset.storage=kafka
 
 ######################################
-# kafka rpc port
+# kafka offset monitor poll
 ######################################
-kafka.eagle.offset.rpc.port=4396
-kafka.eagle.offset.rpc.timeout=120000
+kafka.eagle.offset.monitor.poll=100
+kafka.eagle.offset.logger.enable=true
 
 ######################################
 # alarm email configure
