--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -21,6 +21,12 @@ kafka.eagle.webui.port=8048
 kafka.eagle.offset.storage=kafka
 
 ######################################
+# kafka offset monitor poll
+######################################
+kafka.eagle.offset.monitor.poll=100
+kafka.eagle.offset.logger.enable=false
+
+######################################
 # alarm email configure
 ######################################
 kafka.eagle.mail.enable=true
