--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -48,5 +48,5 @@ kafka.eagle.sasl.client=/Users/dengjie/hadoop/workspace/kafka-v2/src/main/resour
 kafka.eagle.driver=com.mysql.jdbc.Driver
 kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 kafka.eagle.username=root
-kafka.eagle.password=smartlab
+kafka.eagle.password=123456
 
