fixed readme & remove conflict jar

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -2,7 +2,7 @@
 # multi zookeeper&kafka cluster list
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
-cluster1.zk.list=slave01:2181
+cluster1.zk.list=dn1:2181
 
 ######################################
 # zk client thread limit
