--- a/kafka-eagle-core/pom.xml
+++ b/kafka-eagle-core/pom.xml
@@ -29,6 +29,16 @@
 			<groupId>org.apache.calcite</groupId>
 			<artifactId>calcite-avatica</artifactId>
 			<version>1.6.0</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>jackson-core</artifactId>
+					<groupId>com.fasterxml.jackson.core</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jackson-databind</artifactId>
+					<groupId>com.fasterxml.jackson.core</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.calcite</groupId>
