--- a/kafka-eagle-common/pom.xml
+++ b/kafka-eagle-common/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.smartloli.kafka.eagle</groupId>
 		<artifactId>kafka-eagle</artifactId>
-		<version>1.1.8</version>
+		<version>1.1.9</version>
 	</parent>
 	<artifactId>kafka-eagle-common</artifactId>
 
@@ -93,6 +93,16 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.30</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.8.7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.8.7</version>
 		</dependency>
 	</dependencies>
 </project>
