supported on sqlite store data by default

--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -46,8 +46,8 @@ kafka.eagle.sasl.client=/hadoop/kafka-eagle/conf/kafka_client_jaas.conf
 ######################################
 # kafka jdbc driver address
 ######################################
-kafka.eagle.driver=com.mysql.jdbc.Driver
-kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+kafka.eagle.driver=org.sqlite.JDBC
+kafka.eagle.url=jdbc:sqlite:/Users/dengjie/workspace/kafka-egale/db/ke.db
 kafka.eagle.username=root
 kafka.eagle.password=smartloli
 
