add broker alert

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -26,9 +26,16 @@ kafka.eagle.offset.storage=kafka
 kafka.eagle.mail.enable=true
 kafka.eagle.mail.sa=alert_sa
 kafka.eagle.mail.username=alert_sa@126.com
-kafka.eagle.mail.password=123456
+kafka.eagle.mail.password=dengjie420
 kafka.eagle.mail.server.host=smtp.126.com
 kafka.eagle.mail.server.port=25
+
+######################################
+# alarm user configure,
+# like smartloli@gmail.org
+######################################
+kafka.eagle.alert.users=smartloli.org@gmail.com
+
 
 ######################################
 # delete kafka topic token
