split zookeeper metrics

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -2,8 +2,8 @@
 # multi zookeeper&kafka cluster list
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
-#cluster1.zk.list=dn1:2181,dn2:2181,dn3:2181
-cluster1.zk.list=localhost:2181
+cluster1.zk.list=dn1:2181,dn2:2181,dn3:2181
+#cluster1.zk.list=localhost:2181
 
 ######################################
 # zk client thread limit
