--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -3,7 +3,7 @@
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
 #cluster1.zk.list=dn1:2181,dn2:2181,dn3:2181
-cluster1.zk.list=localhost:2181
+cluster1.zk.list=dn1:2181
 
 ######################################
 # zk client thread limit
@@ -23,7 +23,7 @@ kafka.eagle.offset.storage=kafka
 ######################################
 # alarm email configure
 ######################################
-kafka.eagle.mail.enable=true
+kafka.eagle.mail.enable=false
 kafka.eagle.mail.sa=alert_sa
 kafka.eagle.mail.username=alert_sa@126.com
 kafka.eagle.mail.password=dengjie420
@@ -48,7 +48,6 @@ kafka.eagle.topic.token=keadmin
 kafka.eagle.sasl.enable=false
 kafka.eagle.sasl.protocol=SASL_PLAINTEXT
 kafka.eagle.sasl.mechanism=PLAIN
-kafka.eagle.sasl.client=/Users/dengjie/hadoop/workspace/kafka-v2/src/main/resources/kafka_client_jaas.conf
 
 ######################################
 # kafka jdbc driver address
