fixed offset is out of range

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -3,7 +3,7 @@
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
 #cluster1.zk.list=dn1:2181,dn2:2181,dn3:2181
-cluster1.zk.list=dn1:2181
+cluster1.zk.list=127.0.0.1:2181
 
 ######################################
 # zk client thread limit
@@ -19,6 +19,13 @@ kafka.eagle.webui.port=8048
 # kafka offset storage
 ######################################
 kafka.eagle.offset.storage=kafka
+
+######################################
+# enable kafka metrics
+######################################
+kafka.eagle.metrics.charts=false
+
+kafka.eagle.sql.fix.error=false
 
 ######################################
 # alarm email configure
