--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -21,6 +21,11 @@ kafka.eagle.webui.port=8048
 kafka.eagle.offset.storage=kafka
 
 ######################################
+# enable kafka metrics
+######################################
+kafka.eagle.metrics.charts=false
+
+######################################
 # alarm email configure
 ######################################
 kafka.eagle.mail.enable=true
@@ -47,6 +52,10 @@ kafka.eagle.sasl.mechanism=PLAIN
 ######################################
 kafka.eagle.driver=org.sqlite.JDBC
 kafka.eagle.url=jdbc:sqlite:/hadoop/kafka-eagle/db/ke.db
-kafka.eagle.username=root
-kafka.eagle.password=smartloli
+
+######################################
+# if you use mysql, the following properties will be used
+######################################
+# kafka.eagle.username=
+# kafka.eagle.password=
 
