--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -52,10 +52,6 @@ kafka.eagle.sasl.mechanism=PLAIN
 ######################################
 kafka.eagle.driver=org.sqlite.JDBC
 kafka.eagle.url=jdbc:sqlite:/hadoop/kafka-eagle/db/ke.db
-
-######################################
-# if you use mysql, the following properties will be used
-######################################
-# kafka.eagle.username=
-# kafka.eagle.password=
+kafka.eagle.username=root
+kafka.eagle.password=smartloli
 
