fixed create system userid by auto

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -23,7 +23,7 @@ kafka.eagle.offset.storage=kafka
 ######################################
 # enable kafka metrics
 ######################################
-kafka.eagle.metrics.charts=false
+kafka.eagle.metrics.charts=true
 
 kafka.eagle.sql.fix.error=false
 
