compatible mutil cluster consumer

--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -18,7 +18,8 @@ kafka.eagle.webui.port=8048
 ######################################
 # kafka offset storage
 ######################################
-kafka.eagle.offset.storage=kafka
+cluster1.kafka.eagle.offset.storage=kafka
+cluster2.kafka.eagle.offset.storage=zk
 
 ######################################
 # enable kafka metrics
@@ -31,7 +32,7 @@ kafka.eagle.metrics.charts=false
 kafka.eagle.mail.enable=true
 kafka.eagle.mail.sa=alert_sa
 kafka.eagle.mail.username=alert_sa@163.com
-kafka.eagle.mail.password=mqslimczkdqabbbg
+kafka.eagle.mail.password=mqslimczkdqabbbh
 kafka.eagle.mail.server.host=smtp.163.com
 kafka.eagle.mail.server.port=25
 
