modify consumer topic lag

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -31,7 +31,7 @@ kafka.eagle.sql.fix.error=false
 ######################################
 # alarm email configure
 ######################################
-kafka.eagle.mail.enable=false
+kafka.eagle.mail.enable=true
 kafka.eagle.mail.sa=alert_sa
 kafka.eagle.mail.username=alert_sa@126.com
 kafka.eagle.mail.password=dengjie420
