fixed consumer offset by kafka-2.1.0

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -29,12 +29,17 @@ kafka.eagle.metrics.charts=true
 kafka.eagle.sql.fix.error=false
 
 ######################################
+# kafka sql topic records max
+######################################
+kafka.eagle.sql.topic.records.max=5000
+
+######################################
 # alarm email configure
 ######################################
 kafka.eagle.mail.enable=true
 kafka.eagle.mail.sa=alert_sa
 kafka.eagle.mail.username=alert_sa@126.com
-kafka.eagle.mail.password=dengjie420
+kafka.eagle.mail.password=smartloli
 kafka.eagle.mail.server.host=smtp.126.com
 kafka.eagle.mail.server.port=25
 
