--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -25,6 +25,12 @@ cluster2.kafka.eagle.offset.storage=zk
 # enable kafka metrics
 ######################################
 kafka.eagle.metrics.charts=false
+kafka.eagle.sql.fix.error=false
+
+######################################
+# kafka sql topic records max
+######################################
+kafka.eagle.sql.topic.records.max=5000
 
 ######################################
 # alarm email configure
