--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -35,12 +35,25 @@ kafka.eagle.sql.topic.records.max=5000
 ######################################
 # alarm email configure
 ######################################
-kafka.eagle.mail.enable=true
+kafka.eagle.mail.enable=false
 kafka.eagle.mail.sa=alert_sa
 kafka.eagle.mail.username=alert_sa@163.com
 kafka.eagle.mail.password=mqslimczkdqabbbh
 kafka.eagle.mail.server.host=smtp.163.com
 kafka.eagle.mail.server.port=25
+
+######################################
+# alarm im configure
+######################################
+#kafka.eagle.im.dingding.enable=true
+#kafka.eagle.im.dingding.url=https://oapi.dingtalk.com/robot/send?access_token=
+
+#kafka.eagle.im.wechat.enable=true
+#kafka.eagle.im.wechat.url=https://qyapi.weixin.qq.com/cgi-bin/message/send?access_token=
+#kafka.eagle.im.wechat.touser=
+#kafka.eagle.im.wechat.toparty=
+#kafka.eagle.im.wechat.totag=
+#kafka.eagle.im.wechat.agentid=
 
 ######################################
 # delete kafka topic token
