fixed issue by #132

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -1,9 +1,9 @@
 ######################################
 # multi zookeeper&kafka cluster list
 ######################################
-kafka.eagle.zk.cluster.alias=cluster2
-#cluster2.zk.list=dn1:2181,dn2:2181,dn3:2181
-cluster2.zk.list=127.0.0.1:2181
+kafka.eagle.zk.cluster.alias=cluster2,cluster1
+cluster2.zk.list=dn1:2181,dn2:2181,dn3:2181
+cluster1.zk.list=127.0.0.1:2181
 
 ######################################
 # zk client thread limit
@@ -18,7 +18,7 @@ kafka.eagle.webui.port=8048
 ######################################
 # kafka offset storage
 ######################################
-#cluster1.kafka.eagle.offset.storage=kafka
+cluster1.kafka.eagle.offset.storage=kafka
 cluster2.kafka.eagle.offset.storage=kafka
 
 ######################################
