fixed0.8 & fixed kafka new version

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -1,12 +1,12 @@
 ######################################
 # multi zookeeper&kafka cluster list
 ######################################
-kafka.eagle.zk.cluster.alias=cluster1,cluster2,cluster3,cluster4
+kafka.eagle.zk.cluster.alias=cluster1
 #cluster2.zk.list=dn1:2181,dn2:2181,dn3:2181
-cluster1.zk.list=127.0.0.1:2181
-cluster2.zk.list=n2:2181
-cluster3.zk.list=n1:2181
-cluster4.zk.list=n3:2181
+cluster1.zk.list=vmn1:2181
+#cluster2.zk.list=vmn2:2181
+#cluster3.zk.list=vmn3:2181
+#cluster4.zk.list=vmn4:2181
 
 ######################################
 # zk client thread limit
@@ -21,10 +21,10 @@ kafka.eagle.webui.port=8048
 ######################################
 # kafka offset storage
 ######################################
-cluster1.kafka.eagle.offset.storage=kafka
-cluster2.kafka.eagle.offset.storage=zookeeper
-cluster3.kafka.eagle.offset.storage=kafka
-cluster4.kafka.eagle.offset.storage=kafka
+cluster1.kafka.eagle.offset.storage=zookeeper
+#cluster2.kafka.eagle.offset.storage=kafka
+#cluster3.kafka.eagle.offset.storage=kafka
+#cluster4.kafka.eagle.offset.storage=kafka
 
 ######################################
 # enable kafka metrics
